Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,11 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connect database and create cursor here"
+    "# connect database and create cursor here\n",
+    "import sqlite3\n",
+    "connection = sqlite3.connect('pets_database.db')\n",
+    "cursor = connection.cursor()"
    ]
   },
   {
@@ -75,11 +78,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "table cats already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-3eef10850e0f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mbreed\u001b[0m \u001b[0mTEXT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m )\n\u001b[0;32m----> 8\u001b[0;31m ''')\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: table cats already exists"
+     ]
+    }
+   ],
    "source": [
-    "# create table here"
+    "cursor.execute('''\n",
+    "CREATE TABLE cats (\n",
+    "    id INTEGER PRIMARY KEY,\n",
+    "    name TEXT,\n",
+    "    age INTEGER,\n",
+    "    breed TEXT\n",
+    ")\n",
+    "''')"
    ]
   },
   {
@@ -104,11 +126,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7ff6dc324420>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# insert Maru into the pet_database.db here"
+    "# insert Maru into the pet_database.db here\n",
+    "\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ('Maru', 3, 'Scottish Fold');''')\n"
    ]
   },
   {
@@ -170,11 +205,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7ff6dc324420>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES (\"Lil\\' Bub\", 5, 'American Shorthair');''')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7ff6dc324420>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ('Hannah', 1, 'Tabby');''')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# execute the INSERT INTO statements here"
+    "# execute the INSERT INTO statements here\n",
+    "\n",
+    "file = open(\"./01_insert_cats_into_cats_table.sql\", 'r') # opens the SQL file\n",
+    "sql = file.read() # reads and returns the SQL statements\n",
+    "cursor.executescript(sql) # executes the returned SQL statements and inserts the values into the table\n",
+    "file.close() # closes the file\n"
    ]
   },
   {
@@ -258,11 +342,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Maru',), ('Hana',)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select cats from database here"
+    "# select cats from database here\n",
+    "\n",
+    "cursor.execute('''SELECT name FROM cats;''').fetchall()"
    ]
   },
   {
@@ -298,11 +395,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3, 'Hannah', 1, 'Tabby')]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select using WHERE clause here"
+    "# select using WHERE clause here\n",
+    "\n",
+    "cursor.execute('''SELECT * FROM cats WHERE name = \"Maru\";''').fetchall()\n",
+    "cursor.execute('''SELECT * FROM cats WHERE age < 2;''').fetchall()"
    ]
   },
   {
@@ -346,12 +457,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7ff6dc324420>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# update hannah here\n",
+    "\n",
+    "cursor.execute('''UPDATE cats SET name = \"Hana\" WHERE name = \"Hannah\";''')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# update hannah here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -378,11 +509,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7ff6dc324420>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# DELETE record with id=2 here"
+    "# DELETE record with id=2 here\n",
+    "cursor.execute('''DELETE FROM cats WHERE id = 2;''')\n"
    ]
   },
   {
